tests/errors/no_main_program_01.f90
subroutine add(a, b, c)
    integer, intent(in) :: a, b
    integer, intent(out) :: c
    c = a + b
end subroutine
